Upgrade HForm rendering system: Transition to model-driven architecture This commit implements a complete refactoring of the form rendering system to address scalability, memory consumption, and logic-view coupling. Key Architectural Changes: • Model-Driven State: Introduced ColumnModel and ColumnGroupModel as lightweight state holders, decoupling form data from Android Views. • Centralized Logic: Implemented FormController and FormExpressionEvaluator to handle navigation, repeat group expansion, and JEXL evaluations independently of the UI. • Efficient UI Lifecycle: Transitioned FormFragment and ColumnGroupViewAdapter to a modern model-driven approach where UI components (ColumnView subclasses) are purely reactive and recycled. • Lazy Initialization: Refactored initColumnViews to initialize models first, significantly reducing initial memory footprint and startup time for large forms.